<resources>
    <string name="app_name">Info Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="navigation_settings">settings</string>
    <string name="navigation_search">Search</string>
    <string name="temperatureTemplate">22º</string>
    <string name="locationTemplate">London, UK</string>

    <!--Forecast strings-->
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="day_5">Day 5</string>
    <string name="day_6">Day 6</string>
    <string name="day_7">Day 7</string>
</resources>
