<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Day 1-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />



                <ImageView
                    android:id="@+id/dayImg1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="@dimen/weekly_forecast_margin"
                    android:layout_marginRight="@dimen/weekly_forecast_margin"
                    android:src="@drawable/heavy_snow"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/weekly_forecast_margin">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/circle" />
                    <TextView
                        android:id="@+id/day1Temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="23"
                        android:textSize="18sp"/>
                </RelativeLayout>




        </LinearLayout>



        <!--Day 2-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                android:src="@drawable/snow"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day2Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>

        <!--Day 3-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                                android:src="@drawable/heavy_snow"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day3Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>

        <!--Day 4-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_4"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                android:src="@drawable/sunny_clouds"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day4Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>

        <!--Day 5-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                android:src="@drawable/rain"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day5Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>

        </LinearLayout>

        <!--Day 6-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_6"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                android:src="@drawable/sunny"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day6Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>

        </LinearLayout>

        <!--Day 7-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/day_7"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColour" />

            <ImageView
                android:id="@+id/dayImg7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/weekly_forecast_margin"
                android:layout_marginRight="@dimen/weekly_forecast_margin"
                android:src="@drawable/sunny_clouds"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/weekly_forecast_margin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/day7Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textSize="18sp"/>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
